--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,11 @@
    
     <h1>MARS MISSIONS</h1>
     <ul class='missions'>
-        <% for (let i = 0; i < Missions.length; i++)%><%{%> 
-        <li>mission <%=i%>: <a href="missions/0"><%=Missions[i].name%></a> </li>
-    <%}%>
+        <li><a href="missions/0"><%=Missions[0].name%></a></li><br>
+        <li><a href="missions/1"><%=Missions[1].name%></a></li><br>
+        <li><a href="missions/2"><%=Missions[2].name%></a></li><br>
+        <li><a href="missions/3"><%=Missions[3].name%></a></li><br>
+        <li><a href="missions/4"><%=Missions[4].name%></a></li><br>
     </ul>
 </body>
 </html>
