--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,9 +7,9 @@
     <title>space homework</title>
 </head>
 <body>
-    <%=mission.name%>
-    <%=mission.launchDate%>
-    <%=mission.operator%>
-    <%=mission.missionType%>
+    <h1><%=mission.name%> Mission</h1><br>
+    <h3>launch date: <%=mission.launchDate%></h3><br>
+    <h3>operator: <%=mission.operator%></h3><br>
+    <h3>mission type: <%=mission.missionType%></h3>
 </body>
 </html>
